--- a/simple-chat/package.json
+++ b/simple-chat/package.json
@@ -12,12 +12,8 @@
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "style-loader": "^1.0.0",
-    "vite": "^5.4.7",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "vite": "^5.4.7"
   }
 }
